--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>JSON-RPC Demo for JQuery Terminal Emulator</title>
-    <meta name="author" content="Jakub Jankiewicz - jcubic&#64;onet.pl"/>
-    <meta name="Description" content="Demonstration for JQuery Terminal Emulator using call automaticly JSON-RPC service (in php) with authentication."/>
+    <title>Zhiyuan Lin's Home Page</title>
+    <meta name="author" content="Zhiyuan Lin"/>
+    <meta name="Description" content="Interactive Homepage."/>
     <link rel="sitemap" type="application/xml" title="Sitemap" href=""/>
-    <link rel="shortcut icon" href="favicon.ico"/>
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/jquery.mousewheel-min.js"></script>
     <script src="js/jquery.terminal.min.js"></script>
@@ -16,11 +15,15 @@
 
 <script>
 jQuery(document).ready(function($) {
-    var id = 1;
+     var id = 1;
+     var intro = "I recently graduated from the University of Waterloo with a Masters degree specializing in software development. \n"
+	       + "I\'m interested in algorithm design and statistical anlaysis.";
     $('body').terminal(function(command, term) {
         if (command == 'help') {
-            term.echo("available commands are mysql, js, test");
-        } else if (command == 'test'){
+            term.echo("The commands availabe now are: intro");
+        } else if (command == 'intro') {
+	    term.echo(intro);
+	} else if (command == 'test'){
             term.push(function(command, term) {
                 if (command == 'help') {
                     term.echo('if you type ping it will display pong');
@@ -41,43 +44,11 @@ jQuery(document).ready(function($) {
             }, {
                 name: 'js',
                 prompt: 'js> '});
-        } else if (command == 'mysql') {
-            term.push(function(command, term) {
-                term.pause();
-                $.jrpc("mysql-rpc-demo.php",
-                       "query",
-                       [command],
-                       function(data) {
-                           term.resume();
-                           if (data.error && data.error.message) {
-                               term.error(data.error.message);
-                           } else {
-                               if (typeof data.result == 'boolean') {
-                                   term.echo(data.result ? 'success' : 'fail');
-                               } else {
-                                   var len = data.result.length;
-                                   for(var i=0;i<len; ++i) {
-                                       term.echo(data.result[i].join(' | '));
-                                   }
-                               }
-                           }
-                       },
-                       function(xhr, status, error) {
-                           term.error('[AJAX] ' + status +
-                                      ' - Server reponse is: \n' +
-                                      xhr.responseText);
-                           term.resume();
-                       });
-            }, {
-                greetings: "This is example of using mysql from terminal\n\
-you are allowed to execute: select, insert, update and delete from/to table:\n\
-    table test(integer_value integer, varchar_value varchar(255))",
-                prompt: "mysql> "});
         } else {
-            term.echo("unknow command " + command);
+            term.echo("unknown command: " + command);
         }
     }, {
-        greetings: "multiply terminals demo use help to see available commands",
+        greetings: "Hi! you have stumbled upon Zhiyuan Lin's home page. Enter help to see the list of commands.",
         onBlur: function() {
             // prevent loosing focus
             return false;
