code that is useless for now due to a bug in the library

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ jQuery(document).ready(function($) {
 	    window.open('ZResume.pdf');
 	} else if (command == '') {
             // do nothing
-        } else {
+        } else if (command == 'exit') {
+	    window.close();
+	} else {
             term.echo("unknown command: " + command);
         }
     }, {
