--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <script>
 jQuery(document).ready(function($) {
      var id = 1;
-     var intro = "I recently graduated from the University of Waterloo with a Masters degree specializing in software development. \n"
-	       + "I\'m interested in algorithm design and statistical anlaysis.";
+     var intro = "Now that I think of it. I actually prefer having a real conversation. Drop me an email if you want to chat.";
     $('body').terminal(function(command, term) {
 	if (command == 'help') {
 	    var help = "Below are the commands currently supported: \n"
